--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,5 @@
         "comments": "off",
         "strings": "on"
     },
-    "editor.fontFamily": ""
+    "editor.fontFamily": "\"JetBrainsMono Nerd Font\""
 }
